...
     */
    val TREE: Map<String, List<String>> = linkedMapOf(
        "餐饮" to listOf("食堂", "外卖", "饮品", "其他餐饮"),
        "购物" to listOf("衣物", "日用品", "数码", "美妆", "其他购物"),
        "交通" to listOf("公交地铁", "火车", "打车", "单车", "其他交通"),
        "洗浴" to emptyList(),
        "学习" to listOf("图书", "打印", "其他学习"),
        "医疗" to emptyList(),
        "娱乐" to emptyList(),
        "充值" to emptyList(),
        "其他" to emptyList(),
    )

...
